syntax = "proto3";
package app.v1;

import "buf/validate/validate.proto";
import "kernel/resource.proto";

option go_package = "github.com/aileron-gateway/aileron-gateway/apis/app/v1";

// AuthenticationMiddleware is the definition of the AuthenticationMiddleware object.
// AuthenticationMiddleware implements interface of the middleware.
message AuthenticationMiddleware {
    // [REQUIRED]
    // APIVersion is the defined version of the midleware.
    // This value must be "app/v1".
    string APIVersion = 1 [json_name = "apiVersion", (buf.validate.field).string.const = "app/v1"];

    // [REQUIRED]
    // Kind is the kind of this object.
    // This value must be "AuthenticationMiddleware".
    string Kind = 2 [json_name = "kind", (buf.validate.field).string.const = "AuthenticationMiddleware"];

    // [OPTIONAL]
    // Metadata is the metadata of the middleware object.
    // If not set, both name and namespace in the metadata
    // are treated as "default".
    kernel.Metadata Metadata = 3 [json_name = "metadata"];

    // [OPTIONAL]
    // Spec is the specification of the middleware.
    // Default values are used when nothing is set.
    AuthenticationMiddlewareSpec Spec = 4 [json_name = "spec"];
}

// AuthenticationMiddlewareSpec is the specifications for the AuthenticationMiddleware object.
message AuthenticationMiddlewareSpec {
    // [OPTIONAL]
    // Logger is the reference to a Logger object.
    // Referred object must implement Logger interface.
    // Default Logger is used when not set.
    kernel.Reference Logger = 1 [json_name = "logger"];

    // [OPTIONAL]
    // ErrorHandler is the reference to a ErrorHandler object.
    // Referred object must implement ErrorHandler interface.
    // Default error handler is used when not set.
    kernel.Reference ErrorHandler = 2 [json_name = "errorHandler"];

    // [OPTIONAL]
    // Handlers is the list of reference to AuthenticationHandler objects.
    // Referred object must implement AuthenticationHandler interface.
    // This field is optional but should be set at least 1 handler to make authentication work.
    // Default is not set.
    repeated kernel.Reference Handlers = 3 [json_name = "handlers"];
}
